- Removed a workaround for indexing note pinned status [#1795](https://github.com/Automattic/simplenote-electron/pull/1795)
- Maintenance cleanups [#1796](https://github.com/Automattic/simplenote-electron/pull/1796), [#1797](https://github.com/Automattic/simplenote-electron/pull/1797)
- Updated dependencies [#1802](https://github.com/Automattic/simplenote-electron/pull/1802)

## [v1.13.0]

### Enhancements

- Added matching tags to the notes list on search [#1648](https://github.com/Automattic/simplenote-electron/pull/1648)

### Fixes

- Revision selector is now usable without dragging the entire window [#1741](https://github.com/Automattic/simplenote-electron/pull/1741)
- Only display view settings when coming from the old web app [#1736](https://github.com/Automattic/simplenote-electron/pull/1736)
- Fixed a bug where initial "s" was getting removed from note titles in preview [#1748](https://github.com/Automattic/simplenote-electron/pull/1748)

### Other Changes

- Updated dependencies [#1738](https://github.com/Automattic/simplenote-electron/pull/1738)

## [v1.12.0]

### Enhancements

 - Updated menu icon to use the new icon set [#1694](https://github.com/Automattic/simplenote-electron/pull/1694)
 - Added script to deploy web app [#1723](https://github.com/Automattic/simplenote-electron/pull/1723)
 - Prioritize search results where title matches query [#1705](https://github.com/Automattic/simplenote-electron/pull/1705)

### Fixes

- Fixed markdown code styles [#1702](https://github.com/Automattic/simplenote-electron/pull/1702)
- Stop crashing app in a few cases where it shouldn't [#1721](https://github.com/Automattic/simplenote-electron/pull/1721)
- Prevent infinite duplication of changes caused by relying on shared note bucket [#1724](https://github.com/Automattic/simplenote-electron/pull/1724)
- Prevent note corruption in certain cases involving Asian characters, Emoji, and "surrogate pairs" [#1714](https://github.com/Automattic/simplenote-electron/pull/1714)
