@@ -1,2 +1,3 @@
 export const AUTH_SET = 'AUTH_SET';
+export const FILTER_NOTES = 'FILTER_NOTES';
 export const TAG_DRAWER_TOGGLE = 'TAG_DRAWER_TOGGLE';
