@@ -27,6 +27,7 @@
 - Removed a workaround for indexing note pinned status [#1795](https://github.com/Automattic/simplenote-electron/pull/1795)
 - Maintenance cleanups [#1796](https://github.com/Automattic/simplenote-electron/pull/1796), [#1797](https://github.com/Automattic/simplenote-electron/pull/1797)
 - Updated dependencies [#1802](https://github.com/Automattic/simplenote-electron/pull/1802)
+- Refactor how notes are filtered for better performance and maintainability [#1812](https://github.com/Automattic/simplenote-electron/pull/1812)
 
 ## [v1.13.0]
 
